--- a/.editorconfig
+++ b/.editorconfig
@@ -32,6 +32,9 @@ dotnet_diagnostic.SA1011.severity = none
 # SA1019: Member access symbols should be spaced correctly
 dotnet_diagnostic.SA1019.severity = none
 
+# SA1021: Negative signs should be spaced correctly
+dotnet_diagnostic.SA1021.severity = none
+
 # SA1025: Code should not contain multiple whitespace in a row
 dotnet_diagnostic.SA1025.severity = none
 
