--- a/VoxelViewer.Presentation/packages.config
+++ b/VoxelViewer.Presentation/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Extensions.DependencyInjection" version="3.1.2" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.2" targetFramework="net48" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net48" developmentDependency="true" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net48" />
 </packages>
