--- a/VoxelViewer.Presentation/VoxelViewer2D.Presentation.csproj
+++ b/VoxelViewer.Presentation/VoxelViewer2D.Presentation.csproj
@@ -78,7 +78,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="System.Windows\Snapshot.cs" />
-    <Page Include="Presentation\MainWindow.xaml">
+    <Page Include="Presentation.Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -86,14 +86,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Presentation\MainWindow.xaml.cs">
+    <Compile Include="Presentation.Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="System.Windows.Controls\ContentViewer.cs" />
-    <Compile Include="Presentation\VoxelMapView.cs" />
+    <Compile Include="Presentation.Views\VoxelMapView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
