Fixed ContentViewer and VoxelMapView

--- a/VoxelViewer2D.Application/VoxelViewer2D.Application.csproj
+++ b/VoxelViewer2D.Application/VoxelViewer2D.Application.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>VoxelViewer2D</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Application.ViewModels\" />
     <Folder Include="Presentation.Views\" />
   </ItemGroup>
 
