--- a/VoxelViewer2D.Domain.Extensions/3_VoxelViewer2D.Domain.Extensions.csproj
+++ b/VoxelViewer2D.Domain.Extensions/3_VoxelViewer2D.Domain.Extensions.csproj
@@ -6,10 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Presentation.Views\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,10 +14,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VoxelViewer.Domain\VoxelViewer2D.Domain.csproj" />
+    <ProjectReference Include="..\VoxelViewer.Domain\3_VoxelViewer2D.Domain.csproj" />
   </ItemGroup>
 
 </Project>
