--- a/VoxelViewer.Domain/3_VoxelViewer2D.Domain.csproj
+++ b/VoxelViewer.Domain/3_VoxelViewer2D.Domain.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>VoxelViewer2D</RootNamespace>
+    <AssemblyName>VoxelViewer2D.Domain</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
