--- a/VoxelViewer2D.Application/2_VoxelViewer2D.Application.csproj
+++ b/VoxelViewer2D.Application/2_VoxelViewer2D.Application.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>VoxelViewer2D</RootNamespace>
+    <AssemblyName>VoxelViewer2D.Application</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
