--- a/VoxelViewer.Presentation/1_VoxelViewer2D.Presentation.csproj
+++ b/VoxelViewer.Presentation/1_VoxelViewer2D.Presentation.csproj
@@ -74,6 +74,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Presentation.Views\VoxelMapCanvas.cs" />
     <Compile Include="System.Windows\PointExtensions.cs" />
     <Compile Include="System.Windows\Snapshot.cs" />
     <Page Include="Presentation.Views\MainWindow.xaml">
