--- a/VoxelViewer2D.Application/2_VoxelViewer2D.Application.csproj
+++ b/VoxelViewer2D.Application/2_VoxelViewer2D.Application.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VoxelViewer.Domain\3_VoxelViewer2D.Domain.csproj" />
+    <ProjectReference Include="..\VoxelViewer2D.Domain\3_VoxelViewer2D.Domain.csproj" />
   </ItemGroup>
 
 </Project>
