--- a/VoxelViewer2D.Domain.Extensions/3_VoxelViewer2D.Domain.Extensions.csproj
+++ b/VoxelViewer2D.Domain.Extensions/3_VoxelViewer2D.Domain.Extensions.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\VoxelViewer.Domain\3_VoxelViewer2D.Domain.csproj" />
+    <ProjectReference Include="..\VoxelViewer2D.Domain\3_VoxelViewer2D.Domain.csproj" />
   </ItemGroup>
 
 </Project>
