--- a/VoxelViewer2D.Presentation/1_VoxelViewer2D.Presentation.csproj
+++ b/VoxelViewer2D.Presentation/1_VoxelViewer2D.Presentation.csproj
@@ -120,7 +120,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\VoxelViewer.Domain\3_VoxelViewer2D.Domain.csproj">
+    <ProjectReference Include="..\VoxelViewer2D.Domain\3_VoxelViewer2D.Domain.csproj">
       <Project>{f75cbc23-7d0b-4409-9164-166d8c5b3f59}</Project>
       <Name>3_VoxelViewer2D.Domain</Name>
     </ProjectReference>
